[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/hyh.cutscene_graph/scripts/CutsceneGraphEditor.gd" type="Script" id=6]

[node name="CutsceneGraphEditor" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBar" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="MenuBar"]
margin_right = 67.0
margin_bottom = 14.0
text = "Cutscene: "

[node name="CutsceneName" type="Label" parent="MenuBar"]
margin_left = 71.0
margin_right = 105.0
margin_bottom = 14.0
text = "None"

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GraphEdit" type="GraphEdit" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 582.0
right_disconnects = true
scroll_offset = Vector2( 0, -158 )

[node name="GraphContextMenu" type="PopupMenu" parent="."]
margin_top = 422.0
margin_right = 139.0
margin_bottom = 600.0
size_flags_horizontal = 0
custom_constants/vseparation = 10
items = [ "Add Text Node", null, 0, false, false, 0, 0, null, "", false, "Add Branch Node", null, 0, false, false, 1, 0, null, "", false, "Add Choice Node", null, 0, false, false, 2, 0, null, "", false, "Add Set Node", null, 0, false, false, 3, 0, null, "", false, "Add Action Node", null, 0, false, false, 4, 0, null, "", false, "Add Sub-Graph", null, 0, false, false, 5, 0, null, "", false, "Add Random Node", null, 0, false, false, 6, 0, null, "", false ]

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0

[node name="NodePopupMenu" type="PopupMenu" parent="."]
margin_top = 566.0
margin_right = 88.0
margin_bottom = 600.0
size_flags_horizontal = 0
custom_constants/vseparation = 10
items = [ "Set as root", null, 0, false, false, -1, 0, null, "", false ]

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
[connection signal="connection_request" from="MarginContainer/GraphEdit" to="." method="_on_GraphEdit_connection_request"]
[connection signal="delete_nodes_request" from="MarginContainer/GraphEdit" to="." method="_node_close_request"]
[connection signal="disconnection_request" from="MarginContainer/GraphEdit" to="." method="_on_GraphEdit_disconnection_request"]
